c4prj1_deck/grade.txt
Grading at Sun Mar  7 17:45:06 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:8:37: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   deck->cards[deck->n_cards]->value = &c.value;
                                     ^
deck.c:9:36: error: incompatible types when assigning to type ‘suit_t {aka enum <anonymous>}’ from type ‘suit_t * {aka enum <anonymous> *}’
   deck->cards[deck->n_cards]->suit = &c.suit;
                                    ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
